# LiveVideo

./: .gitignore  README.md  VIDEO_BASICS.md  VIDEO_STREAM_FLOW.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DroneMediaEngine.cpp  DroneMediaEngine.h  LiveVideoEngine.cpp  LiveVideoEngine.h  SrtListener.cpp
app/src/main/java/com/drone/media/: DroneEngineJNI.kt  DroneVideoView.kt  MainActivity.kt  SrtBridge.kt  TelemetryData.kt  UdpVideoSource.kt
app/src/main/java/com/livevideo/media/: LiveVideoEngineJNI.kt  LiveVideoView.kt  MainActivity.kt  SrtBridge.kt  TelemetryData.kt  UdpVideoSource.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
